--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,12 @@ on:
       - main
     paths:
       - 'apps/packages/**'
-
+#ls -l
 jobs:
   build:
     name: Build
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
-    runs-on: ubuntu-latest
+    # if: "!contains(github.event.head_commit.message, 'skip ci')"
+    runs-on: ubuntu-18.04
 
     steps:
       - uses: actions/checkout@v2
@@ -21,6 +21,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: Run Testing
+      - name: Root
+        run: ls -l
+      - name: Run Test
         working-directory: ./packages/ui
         run: node test.js
