--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,53 +1,33 @@
-name: Release
+name: 'server'
+
 on:
   push:
-    branches:
-      - main
+    branches: [main, part2Start-example]
+    paths:
+      - 'packages/ui/**'
+      - '.github/workflow/server.yaml'
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
-    name: Build, Lint, and Test
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Node.js v16
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: Lint code
-        run: yarn lint
-      - name: Run tests
-        run: yarn test
-      - name: Build storybook
+      - name: Build
+        working-directory: ./packages/ui
         run: yarn build
-  
-  release:
-    name: Release package
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.GH_SEMANTIC_RELEASE_TOKEN }}
-      - name: Setup Node.js v16
-        uses: actions/setup-node@v1
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Lint code
-        run: yarn lint
-      - name: Run tests
+      - name: Test
+        working-directory: ./packages/ui
         run: yarn test
-      - name: Build storybook
-        run: yarn build
-      - name: Publish in NPM
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
