--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -2,7 +2,7 @@ name: 'server'
 
 on:
   push:
-    branches: [main, part2Start-example]
+    branches: [main]
     paths:
       - 'packages/ui/**'
       - '.github/workflow/server.yaml'
