--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,10 +48,14 @@ jobs:
           node-version: '14'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: Publish to NPM
+      - name: MI PRIMER LS <--
         run: |
           ls -l
-          yarn publish:zecoreui
+        working-directory: ./packages/ui
+      - name: MI SEGUNDO LS <--
+        run: |
+          ls -l
+          npx semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
