--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "@semantic-release/changelog": "6.0.1"
   },
   "engines": {
     "npm": ">=7.0.0",
