--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "prettier": "^2.5.1",
     "turbo": "latest",
-    "@semantic-release/changelog": "6.0.1"
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1"
   },
   "engines": {
     "npm": ">=7.0.0",
