--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "semantic-release": "semantic-release --extends ./.releaserc.json --branches main"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
