--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,7 +6,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
+    ["@semantic-release/npm" , "packages/ui/*"],
     "@semantic-release/github",
     "@semantic-release/git"
   ]
