trying to publish ui packagejson

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,9 @@
     "tsconfig": "*",
     "config": "*",
     "typescript": "^4.5.3",
-    "semantic-release": "^19.0.2"
+    "semantic-release": "^19.0.2",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1"
   },
   "scripts": {
     "semantic-release": "semantic-release --extends ./.releaserc.json --branches main"
