--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,7 @@ jobs:
         working-directory: ./packages/ui
         run: ls -l
       - name: RUNNING SEMANTIC-RELEASE 🚀
+        working-directory: ./packages/ui
         run: yarn semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
