--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,15 +46,15 @@ jobs:
         with:
           cache: 'yarn'
           node-version: '14'
+          registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
       - name: LS DEL PROYECTO 📚 <--
         working-directory: ./packages/ui
         run: ls -l
       - name: RUNNING SEMANTIC-RELEASE 🚀
-        with:
-          path: packages/ui
-        run: yarn semantic-release
+        working-directory: ./packages/ui
+        run: yarn publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
