--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,7 @@
     "typescript": "^4.5.3"
   },
   "scripts": {
-    "semantic-release": "npx semantic-release -e semantic-release-monorepo"
+    "semantic-release": "npx semantic-release -e semantic-release-monorepo --branches main"
   },
   "publishConfig": {
     "access": "restricted"
