--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,12 +8,6 @@
     "@semantic-release/changelog",
     "@semantic-release/npm",
     "@semantic-release/github",
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["packages/ui/package.json"],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
+    "@semantic-release/git"
   ]
 }
