--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "publish": "npx semantic-release -extends ./.releaserc.json --branches main"
+    "npm:publish": "npx semantic-release -extends ./.releaserc.json --branches main"
   },
   "devDependencies": {
     "prettier": "^2.5.1",
