--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prettier": "^2.5.1",
     "turbo": "latest",
     "@semantic-release/changelog": "6.0.1",
-    "@semantic-release/git": "10.0.1"
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "9.0.0"
   },
   "engines": {
     "npm": ">=7.0.0",
