--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,6 +25,6 @@
     "semantic-release": "npx semantic-release -e ./.releaserc.json --branches main"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   }
 }
