--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,11 +6,7 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    ["@semantic-release/npm", {
-      "pkgRoot": "./packages/ui",
-      "npmPublish": false,
-      "tarballDir": "./packages/ui"
-    }],
+    "@semantic-release/npm",
     "@semantic-release/github",
     "@semantic-release/git"
   ]
