--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,8 +51,8 @@ jobs:
       - name: LS 📚 <--
         working-directory: ./packages/ui
         run: ls -l
-      - name: RUNNING SEMANTIC-RELEASE 🚀
-        run: yarn asdf
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: RUNNING SEMANTIC-RELEASE 🚀
+        run: yarn tst
