--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "npm:publish": "yarn -w designsystemexampleui publish",
-    "tst": "npx semantic-release --workspace designsystemexampleui -e semantic-release-monorepo --branches main"
+    "tst": "npx --workspace designsystemexampleui semantic-release -e semantic-release-monorepo --branches main"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.1",
