--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,24 +35,27 @@ jobs:
       - name: Build
         run: yarn build
 
-
   publish:
+    name: Release
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     needs: [build]
-    runs-on: ubuntu-18.04
-    if: ${{ github.ref == 'refs/heads/main' }}
+
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v2
         with:
           cache: 'yarn'
           node-version: '14'
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - name: LS 📚 <--
-        working-directory: ./packages/ui
-        run: ls -l
+      - name: Release 🚀
+        run: yarn publish:release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: RUNNING SEMANTIC-RELEASE 🚀
-        run: yarn tst
+          GH_USER: 'semantic-release'
+          GIT_AUTHOR_NAME: '@semantic-release'
+          GIT_COMMITTER_NAME: '@semantic-release'
